Fixes with font family, descriptions and added current text

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,3 +26,10 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
+
+  assets:
+    - assets/fonts/
+  fonts:
+    - family: Gilroy
+      fonts:
+        - asset: assets/fonts/gilroy_light.ttf
